# microsoft-cognitiveservices-speech-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
c_api/: azac_api_c_common.h  azac_api_c_diagnostics.h  azac_api_c_error.h  azac_debug.h  speechapi_c.h  speechapi_c_audio_config.h  speechapi_c_audio_processing_options.h  speechapi_c_audio_stream.h  speechapi_c_audio_stream_format.h  speechapi_c_auto_detect_source_lang_config.h  speechapi_c_common.h  speechapi_c_connection.h  speechapi_c_conversation_transcription_result.h  speechapi_c_conversation_translator.h  speechapi_c_diagnostics.h  speechapi_c_dialog_service_config.h  speechapi_c_dialog_service_connector.h  speechapi_c_embedded_speech_config.h  speechapi_c_error.h  speechapi_c_factory.h  speechapi_c_grammar.h  speechapi_c_intent_recognizer.h  speechapi_c_json.h  speechapi_c_language_understanding_model.h  speechapi_c_operations.h  speechapi_c_pattern_matching_model.h  speechapi_c_pronunciation_assessment_config.h  speechapi_c_property_bag.h  speechapi_c_recognizer.h  speechapi_c_result.h  speechapi_c_speaker_recognition.h  speechapi_c_speech_config.h  speechapi_c_speech_recognition_model.h  speechapi_c_synthesizer.h  spxdebug.h  spxerror.h
src/: bindings.rs  common.rs
